--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,7 +15,7 @@ on:
       image:
         description: 'Which image to build'
         required: true
-        default: 'all'
+        default: 'editor-source'
         type: choice
         options:
           - all
