Add runtime branding files for all three TeamSync products
Create branding.css, branding.js, and branding-desktop.css for Document,
Sheets, and Presentation variants. Each has product-specific theming:
- Document: Blue theme (#2563eb)
- Sheets: Green theme (#059669)
- Presentation: Orange theme (#ea580c)

Update Dockerfiles to copy branding files to browser/dist directory so
they're served at /browser/{version}/ paths.

--- a/docker/Dockerfile.sheets.25
+++ b/docker/Dockerfile.sheets.25
@@ -186,6 +186,12 @@ RUN fc-cache -fv
 # Copy source-built coolwsd binaries (with branding)
 COPY --from=coolwsd-builder /install/opt/cool/ /opt/cool/
 
+# Copy runtime branding files to browser directory
+# These are served at /browser/{version}/branding.css, etc.
+COPY docker/branding/sheets/branding.css /opt/cool/share/coolwsd/browser/dist/branding.css
+COPY docker/branding/sheets/branding.js /opt/cool/share/coolwsd/browser/dist/branding.js
+COPY docker/branding/sheets/branding-desktop.css /opt/cool/share/coolwsd/browser/dist/branding-desktop.css
+
 # Copy license notice
 COPY docker/branding/LICENSE_NOTICE.txt /opt/cool/LICENSE_NOTICE.txt
 
