--- a/docker/Dockerfile.document-source
+++ b/docker/Dockerfile.document-source
@@ -172,16 +172,26 @@ WORKDIR ${LO_BUILD_DIR}
 # - --enable-mergelibs (CRITICAL: creates libmergedlo.so required by coolwsd)
 # - Optimizations for headless server deployment
 # - All necessary LOKit/LibreOfficeKit components
-# We add:
+# - --disable-report-builder, --disable-lotuswordpro, --with-galleries=no
+#
+# We add additional optimizations:
 # - --without-package-format: skip package generation
 # - --without-system-icu: Ubuntu 24.04 ICU 74 has breakiterator issues
-# - --with-lang=en-US: English-only (faster build, smaller image, no gettext needed)
+# - --with-lang=en-US: English-only (faster build, smaller image)
+# - --disable-extensions: Remove extension support (reduces size)
+# - --disable-scripting: Remove BASIC, Java, Python scripting
+# - --disable-avmedia: Disable audio/video media embedding
+# - --enable-pch: Precompiled headers for faster builds
 RUN echo "==> Configuring LibreOffice build with CPLinux-LOKit distro..." \
     && ./autogen.sh \
     --with-distro=CPLinux-LOKit \
     --without-package-format \
     --without-system-icu \
     --with-lang=en-US \
+    --disable-extensions \
+    --disable-scripting \
+    --disable-avmedia \
+    --enable-pch \
     --with-parallelism=$(nproc) 2>&1 | tee /build/configure.log
 
 # Build LibreOffice (this takes 2-4 hours)
